tests/machine/x/java/min_max_builtin.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramsmin_max_builtin2113493502/001/Main.java:3: error: incompatible types: no instance(s) of type variable(s) T exist so that List<T> conforms to int
	static int nums = java.util.Arrays.asList(3, 1, 4);
	                                         ^
  where T is a type-variable:
    T extends Object declared in method <T>asList(T...)
/tmp/TestCompileValidProgramsmin_max_builtin2113493502/001/Main.java:11: error: incompatible types: int cannot be converted to List<Integer>
	System.out.println(min(nums));
	                       ^
/tmp/TestCompileValidProgramsmin_max_builtin2113493502/001/Main.java:12: error: incompatible types: int cannot be converted to List<Integer>
	System.out.println(max(nums));
	                       ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
3 errors


  1| let nums = [3,1,4]
  2| print(min(nums))
